<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sugar Wise Daydream</string>
    <string name="action_settings">Settings</string>
    
    <string name="daydream_name">SugarWise Daydream</string>
    
    <string name="configButton">Configure</string>	
    
    <string name="colorTxt">Color</string>
    <string name="themeTxt">Theme</string>
    <string name="sizeTxt">Size</string>
    
    <string name="pickTheme">Pick a theme</string>
    <string name="pickColor">Pick a color</string>
    <string name="pickSize">Pick a size</string>
    
    <string name="toast_not_configure">Configuration not valid</string>
    <string name="nightModeTxt">Night mode</string>

    <string-array name="sizes">
        <item>Pick a size</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    
    <string-array name="colors">
        <item>Pick a color</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Grey</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Red</item>
        <item>White</item>
        <item>Yellow</item>
    </string-array>
    
    <string-array name="themes">
        <item>Pick a theme</item>
        <item>Art</item>
        <item>Computers</item>
        <item>Cookie</item>
        <item>Debian</item>
        <item>Definitions</item>
        <item>Disclaimer</item>
        <item>Drugs</item>
        <item>Education</item>
        <item>Ethnic</item>
        <item>Food</item>
        <item>Fortunes</item>
        <item>Goedel</item>
        <item>Humorists</item>
        <item>Kids</item>
        <item>Law</item>
        <item>Linux</item>
        <item>Linux Cookie</item>
        <item>Literature</item>
        <item>Love</item>
        <item>Magic</item>
        <item>Medicine</item>
        <item>Men and Women</item>
        <item>Miscellaneous</item>
        <item>Paradoxum</item>
        <item>People</item>
        <item>Platitudes</item>
        <item>Politics</item>
        <item>Riddles</item>
        <item>Science</item>
        <item>Songs and Poems</item>
        <item>Sports</item>
        <item>StarTrek</item>
        <item>Translate me</item>
        <item>Wisdom</item>
        <item>Work</item>
        <item>Zippy</item>
    </string-array>

    <string name="battStatus_connected">Plugged</string>
    <string name="battStatus_unconnected">Battery</string>

    <string name="am">AM</string>
    <string name="pm">PM</string>

    <string name="sunday">Sunday</string>
    <string name="monday">Munday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="formatTxt">Clock format</string>
    <string name="percentSymbol">%</string>


    <string-array name="formats">
        <item>12 hours</item>
        <item>24 hours</item>
    </string-array>


</resources>
